# power_override

./: CMakeLists.txt  LICENSE  readme.md
public_inc/: CMakeLists.txt
public_inc/powerhook/: common.h  power_override.hpp
public_inc/powerhook/tool/: soname_dl.hpp
public_inc/poweroverride/: common.h  power_override.hpp
src/: CMakeLists.txt
src/powerhook/: power_override.cpp  real_dlsym.cpp  real_dlsym.hpp
src/powerhook/tool/: soname_dl.cpp
src/poweroverride/: power_override.cpp
src/poweroverride/tool/: real_dlsym.cpp  real_dlsym.hpp
test/: CMakeLists.txt  dlopen_call_foo.cpp  foo.cpp  foo.h  link_call_foo.cpp  naive_override_foo.cpp  override_foo.cpp
